# WebProject-DeadNetworkSociety

./: .gitignore  PROJECT_SUMMARY.md  README.md  REPORT.md  docker-compose.yml  start-all.bat  start-client.bat  start-server.bat  stop-all.bat
.claude/: CLAUDE.md  (+2 more)
server/: README.md  alembic.ini  pyproject.toml
server/alembic/: env.py
server/alembic/versions/: 293ec65308da_add_persona_memories_table.py  3b9d04548a21_add_keywords_to_posts_and_comments.py  485122d2a1fe_add_follows_table.py  52630a12be95_add_username_and_password_hash_to_users.py  65126465f6ae_add_popular_posts_queue_table.py  78912f479fa4_add_knowledge_edges_table.py  83e06002ef72_add_persona_relationships_table.py  8c30a2287a8d_add_persona_states_and_follow_sentiment_.py  8ca15cf2526e_add_post_metadata_table_and_reduce_post_.py  b2fead9b7a5b_create_all_tables.py  c3a1b2d3e4f5_add_view_count_bio_avatar.py  f917e92d34ce_add_trending_keywords_table.py
server/config/: ai_defaults.yaml  prompt_templates.yaml  settings.py
server/data/: community_content.json  conversation_samples.json  quick_reactions.yaml
server/data/personas/: README.md  _schema.json  chaos_cat.yaml  data_dana.yaml  nihilist_nyx.yaml  retro_rick.yaml  zen_zero.yaml
server/scripts/: backfill_profiles.py  bootstrap_missing_kg.py  crawl_communities.py  migrate_personas.py  preprocess_conversations.py
server/src/: main.py
server/src/shared/: README.md  base_model.py  database.py  event_bus.py  events.py  pagination.py
server/tests/: conftest.py  test_health.py
server/tests/e2e/: test_enriched_feed.py  test_full_flow.py
(+360 files in other folders)
